Created paper search util

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,12 @@ name = "paper_bot_ai"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 dependencies = [
     "aiogram>=3.21.0",
     "asyncio>=3.4.3",
+    "defusedxml>=0.7.1",
+    "findpapers>=0.6.7",
+    "pandas>=2.3.1",
+    "tqdm>=4.67.1",
 ]
