--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,3 +15,29 @@ dependencies = [
 
 [tool.uv.sources]
 findpapers = { git = "https://github.com/denisstrizhkin/findpapers.git", rev = "751abcc6863cb4599b7fb07e415416cb64451c63" }
+
+[dependency-groups]
+dev = [
+    "mypy>=1.17.0",
+    "python-lsp-server[all]>=1.13.0",
+    "ruff>=0.12.4",
+]
+
+[tool.ruff]
+line-length = 79
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
