--- a/container/Containerfile
+++ b/container/Containerfile
@@ -1,12 +1,21 @@
-FROM python:3.10-slim-buster
+FROM python:3.13-slim
+COPY --from=ghcr.io/astral-sh/uv:0.8.0 /uv /uvx /bin/
 
-RUN pip install --no-cache-dir paperbee
+RUN apt-get update -y && \
+    apt-get install -y git && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
-COPY ./config.yml ./google-credentials.json .
+COPY src /app/src
+
+COPY assets /app/src
+
+COPY pyproject.toml uv.lock run_bot.sh .python-version .
 
 EXPOSE 5000
 
-CMD ["paperbee", "post", "--config", "/app/config.yml", "--since", "30"]
+RUN uv sync --locked
+
+CMD ["./run_bot.sh"]
 
